force-app/main/default/objects/Nature_of_Action__c/fields/Approval_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Type__c</fullName>
    <description>What approvals are required for this nature of action?</description>
    <inlineHelpText>What approvals are required for this nature of action?</inlineHelpText>
    <label>Approval Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires Manager and HR Approvals</fullName>
                <default>true</default>
                <label>Requires Manager and HR Approvals</label>
            </value>
            <value>
                <fullName>Requires HR Approval Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>