force-app/main/default/objects/Nature_of_Action__c/fields/Before_You_Begin_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Before_You_Begin_Guidance__c</fullName>
    <description>Guidance provided in the first screen of a personnel action flow</description>
    <inlineHelpText>Guidance provided in the first screen of a personnel action flow</inlineHelpText>
    <label>Before You Begin Guidance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>