force-app/main/default/objects/Nature_of_Action__c/fields/Legal_Authority__c.field-meta.xml
<CustomField>
    <fullName>Legal_Authority__c</fullName>
    <label>Legal Authority</label>
    <length>155</length>
    <type>Text</type>
</CustomField>