force-app/main/default/objects/Nature_of_Action__c/fields/NOAC_Code__c.field-meta.xml
<CustomField>
    <fullName>NOAC_Code__c</fullName>
    <label>NOAC Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>