force-app/main/default/objects/Nature_of_Action__c/fields/Supporting_Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documentation_Type__c</fullName>
    <description>When supporting documentation is required, this field controls what kind of documentation is asked for</description>
    <inlineHelpText>When supporting documentation is required, this field controls what kind of documentation is asked for</inlineHelpText>
    <label>Supporting Documentation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>