force-app/main/default/objects/Nature_of_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NOAC_Code__c</columns>
    <columns>Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>